--- a/intro.qmd
+++ b/intro.qmd
@@ -1,19 +1,1 @@
-## Experiment Design {.unnumbered}
-
-This study integrates multiple single-cell RNA sequencing (scRNA-seq) datasets to investigate host responses to dengue virus (DENV) infection with a focus on immune dynamics and metabolic reprogramming. The analysis incorporates data from both controlled experimental infections and natural clinical cases, providing a comprehensive view of the human response to DENV.
-
-1.  Human Challenge Study (Public Dataset 1)
-
-The first dataset originates from a controlled human challenge study, where five healthy volunteers were experimentally infected with DENV under clinical supervision. Peripheral blood mononuclear cells (PBMCs) were collected at six time points post-infection (e.g., days 0, 2, 4, 6, 8, 10), enabling a detailed time-resolved analysis of the immune response as the infection progressed. This longitudinal design allows for modeling early host responses and tracking dynamic changes in cellular states and gene expression patterns.
-
-2.  Natural Infection Cohort (Public Dataset 2)
-
-The second public dataset includes samples from five individuals naturally infected with dengue virus in an endemic setting. These samples represent real-world, acute-phase infections and serve as an external validation for the patterns observed in the challenge study. Unlike the time-resolved design of the first dataset, this cohort provides a snapshot of the host response during peak infection.
-
-3.  In-House Clinical Dataset (New Data)
-
-Additionally, we generated a new scRNA-seq dataset from a clinical study conducted at our institute. This dataset includes 10 dengue-infected patients and 10 healthy control individuals, with PBMCs collected during the acute phase of infection. This independent cohort enhances the robustness of our findings and supports cross-cohort comparison.
-
-::: cell
-![Experiment plan](demo.jpg){fig-cap="Figure 1. Experiment design." width="80%"}
-:::
+## Genome scale metabolic network model (GEM) {.unnumbered}
